# libapp

./: Cargo.toml
contracts/: book_api.md  genre_api.md  user_api.md
src/: book.rs  database.rs  genre.rs  libs.rs  main.rs  structs.rs  user.rs
