[package]
name = "library_app"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
elasticsearch = "8.5.0-alpha.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
env_logger = "0.10.0"
thiserror = "1.0.40"
